# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keysight"
version = "0.3.1"
authors = [{ name = "Matthew Rankin", email = "matthew@questrail.com" }]
description = "Package for working with Keysight/Agilent test equipment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.26.0"]
classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'License :: OSI Approved :: MIT License',
  'Development Status :: 5 - Production/Stable',
  'Operating System :: OS Independent',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Homepage = "https://github.com/questrail/keysight"
Issues = "https://github.com/questrail/keysight/issues"

[tool.black]
line-length = 80

[tool.pylint]
max-line-length = 80
disable = [
  "E0401", # (unable-to-import)
]

[tool.pyright]
include = ["src"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
venv = "tektronix"

reportMissingImports = false
reportMissingTypeStubs = false

pythonVersion = "3.6"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [
    "src/service_libs",
  ] },
  { root = "src/sdk", pythonVersion = "3.0", extraPaths = [
    "src/backend",
  ] },
  { root = "src/tests", extraPaths = [
    "src/tests/e2e",
    "src/sdk",
  ] },
  { root = "src" },
]
